Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.05.2022 08:51:02</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.05.2022 09:12:57</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -122,7 +122,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy pstruh s citronem a petrzelkovym pestem, stredomorsky fusilli salat s rajcaty, paprikami, cuketami a zelenymi bylinkami {L} 145</li><li>Peceny filet z cerstveho morskeho dasa s citronem a petrzelkovym pestem, stredomorsky fusilli salat s rajcaty, paprikami, cuketami a  zelenymi bylinkami {L} 175</li><li>Grilovane veprove ribsy v indicke tanduri marinade, merunkove catny s nepalskym kardamomem, korenena ryze, salatek 145</li><li>Burrito s prsicky divoke kachny, rajcaty a pekingskym zelim, omacka z pecenych paprik, pecene brambory, salatek {L} 169</li><li>Kvetakove placicky s petrzelkou a spetkou muskatu, stouchane brambory s porkem, tatarska omacka {L} 145 </li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s ananasovou salsou, libanonsky bulgurovy salat s rajcaty, okurkami, pazitkou a petrzelkou {L} 145</li><li>Peceny filet z cerstveho norskeho lososa s ananasovou salsou, libanonsky bulgurovy salat s rajcaty, okurkami, pazitkou a petrzelkou {L} 175</li><li>Ramen s pecenym veprovym kolenem, pak coj, sazenym vejcem a psenicnymi nudlemi v silnem hovezim vyvaru se zelenymi bylinkami {L} 145</li><li>Grilovany jehneci kebab v chlebove placce s cizrnovym hummusem, korenena ryze, salatek {L} 175</li><li>Burrito s pikantnim fazolovym chilli s pecenymi paprikami a chipotle chilli, pecene brambory, salatek {L} 145</li></ol>
 </td>
 </tr>
 </table>
