Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.05.2022 08:52:36</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.05.2022 09:13:24</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Pátek, 13. 05. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Vývar s kuřecím masem, hráškem a nudlemi</strong>
+<strong>Pórková</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Špekové knedlíky se zelím a cibulkou</strong>
+<strong>Kuřecí roláda na česneku s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Filátko Tilapie s dušenou zeleninou a vařeným bramborem</strong>
+<strong>Koblížky s pečenými jablky a vanilkovým krémem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							115,-
 						</span>
 </p>
 <p>
@@ -85,7 +85,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z norskeho slede s pecenymi rajcaty a pestem z medvediho cesneku, cizrnovy salat s paprikami, zeleninou a zelenymi bylinkami 145</li><li>Peceny filet z cerstve prazmy s pecenymi rajcaty a pestem z medvediho cesneku, cizrnovy salat s paprikami, zeleninou a zelenymi bylinkami 175</li><li>Kari madras s kousky krutich prsou, zelenymi fazolkami, paprikou a pak coj, jasminova ryze 145</li><li>Bramborove gnocchi s trhanou srnci pleci pecenou na cervenem vine a korenove zelenine, hobliny zrale goudy, salatek {L} 175</li><li>Ratatouille z pecene zeleniny s ovcim syrem, pecene brambory, salatek 145`</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s citronem a kaparami, bramborovy salat s redkvickami, petrzelkou, cibulkou a majonezou 145</li><li>Paella s krevetami, kalamary, lososem, hraskem, zeleninou a bylinkami, salatek 175</li><li>Nam prik ong – thajske veprove s rajcaty, krevetovou pastou, koriandrem a chilli, ryzove nudle, salatek 145</li><li>Smazeny sekany teleci rizek s ementalem a spetkou muskatu, bramborovy salat s redkvickami, petrzelkou, cibulkou a majonezou, citron {L} 169</li><li>Indicky dal z cervene cocky s rajcaty, gaj coj, zazvorem a rimskym kminem, sazene vejce, pecene brambory, salatek 145 </li></ol>
 </td>
 </tr>
 </table>
