--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.05.2022 08:52:31</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.05.2022 09:15:14</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -138,7 +138,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s citronem a kaparami, bramborovy salat s redkvickami, petrzelkou, cibulkou a majonezou 145</li><li>Paella s krevetami, kalamary, lososem, hraskem, zeleninou a bylinkami, salatek 175</li><li>Nam prik ong – thajske veprove s rajcaty, krevetovou pastou, koriandrem a chilli, ryzove nudle, salatek 145</li><li>Smazeny sekany teleci rizek s ementalem a spetkou muskatu, bramborovy salat s redkvickami, petrzelkou, cibulkou a majonezou, citron {L} 169</li><li>Indicky dal z cervene cocky s rajcaty, gaj coj, zazvorem a rimskym kminem, sazene vejce, pecene brambory, salatek 145 </li></ol>
+<ol><li>Peceny pstruh se susenymi rajcaty a olivami, libanonsky krupkovy salat s cerstvymi okurkami, petrzelkou, zeleninou a citronem {L} 145</li><li>Peceny filet z cerstveho okounika a tresky se susenymi rajcaty a olivami, libanonsky krupkovy salat s cerstvymi okurkami, petrzelkou, zeleninou a citronem {L} 175</li><li>Burrito s mexickym carnitas {trhane veprove} s palivymi slovenskymi paprikami, pecene brambory, jogurtovy dip, salatek {L} 145</li><li>Grilovane medailonky z krutich prsou s merunkovym catny s nepalskym kardamomem, korenena ryze s cockou, salatek 175</li><li>Smazeny kvetak, bramborovy salat s cerstvymi okurkami, redkvickami, bylinkami a majonezou {L} 145 </li></ol>
 </td>
 </tr>
 </table>
