Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 19.05.2022 08:48:40</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 19.05.2022 09:12:07</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -140,7 +140,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Smazene stripsy z kapra {prorezavany – bez kosti} s thajskym chilli dzemem, jasminova ryze, salatek {L} 149 </li><li>Spagety s uzenym divokym lososem, cherry rajcaty, zelenou cibulkou a petrzelkou {L} 175</li><li>Indicka korma s krutim masem, cerstvym ananasem, cuketami, orisky a kokosovym mlekem, jasminova ryze 149</li><li>Bazanti stehna al Cacciatore {po myslivecku} s paprikami, olivami, zampiony, rajcaty a spetkou tymianu, pecene brambory, salatek 169</li><li>Indicke placicky ze zluteho hrachu a mladeho hrasku s piskavici a rimskym kminem, korenena ryze s cockou, matovy jogurtovy dip, salatek 149</li></ol>
+<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a ovcim balkanskym syrem, jasminova ryze, salatek 149</li><li>Peceny filet z cerstveho norskeho lososa s citronem a omackou salsa verde, stouchane brambory s porkem, salatek 175</li><li>Indicke birjany z basmati ryze s pecenymi veprovymi kousky na kari, kvetakem a zelenymi fazolkami, jablecne catny se zazvorem, salatek 149</li><li>Smazene rizecky z kanci kyty a kurecich prsou {volny chov}, stouchane brambory s porkem, rajcatovy salat se zelenou cibulkou, citron {L} 175</li><li>Thajsky salat z ryzovych nudli s opekanym tempehem, cerstvou zeleninou a bylinkami, sladkokyselou limetkovou zalivkou a krupavou cibulkou {L} 149</li></ol>
 </td>
 </tr>
 </table>
