Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 20.05.2022 07:38:34</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 20.05.2022 08:15:27</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,21 +7,21 @@
 <h5>Pátek, 20. 05. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Papriková s klobásou</strong>
+<strong>Zeleninová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažený sýr s hranolkami a tatarkou</strong>
+<strong>Grilovaný tuňák na trhaném salátku se sezamovým trojhránkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							137,-
+							139,-
 						</span>
 </p>
 <p>
-<strong>Hamburská Vepřová plec s rýží</strong>
+<strong>Kuřecí nudličky tandoori s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							137,-
@@ -52,7 +52,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 20.5.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Míša dort</div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Matcha cheesecake</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Šopský salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Bramborový krém se žampiony v menu  <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Bramborový krém se žampiony samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Pečené kuřecí stehno, tarhoňa na másle, pesto z medvědího česneku, omáčka z pečených paprik <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g Zeleninové karbanátky, šťouchané brambory s jarní cibulkou, římský salát, hořčičný dresing <em title="Mléko">7</em><em title="Celer">9</em><em title="Hořčice">10</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -85,7 +130,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a ovcim balkanskym syrem, jasminova ryze, salatek 149</li><li>Peceny filet z cerstveho norskeho lososa s citronem a omackou salsa verde, stouchane brambory s porkem, salatek 175</li><li>Indicke birjany z basmati ryze s pecenymi veprovymi kousky na kari, kvetakem a zelenymi fazolkami, jablecne catny se zazvorem, salatek 149</li><li>Smazene rizecky z kanci kyty a kurecich prsou {volny chov}, stouchane brambory s porkem, rajcatovy salat se zelenou cibulkou, citron {L} 175</li><li>Thajsky salat z ryzovych nudli s opekanym tempehem, cerstvou zeleninou a bylinkami, sladkokyselou limetkovou zalivkou a krupavou cibulkou {L} 149</li></ol>
+<ol><li>Peceny cerstvy jihocesky pstruh s pecenymi cherry rajcaty a petrzelkovym pestem, cockovy salat s paprikami, gaj coj, zeleninou a bylinkami 149</li><li>Peceny filet z cerstveho okounika a candata s pecenymi cherry rajcaty a petrzelkovym pestem, cockovy salat s paprikami, gaj coj, zeleninou a bylinkami 175</li><li>Burrito s kurecimi gyros nudlickami {volny chov}, pekingskym zelim a rajcaty, pecene brambory, tzatziki, salatek {L} 149</li><li>Spagety s nudlickami divocaka a divoke kachny {prsa}, gaj coj, jalapenos paprickami a zralou goudou {L} 175</li></ol>
 </td>
 </tr>
 </table>
