Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.05.2022 12:42:52</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.05.2022 13:10:57</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -123,6 +123,78 @@
 </table>
 <table>
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
+<tr>
+<td>
+<table class="dm">
+<tbody>
+<tr>
+<td class="amount">100 g</td>
+<td class="title">Tvarůžkový tatarák, červená cibulka, feferonka, pažitka,
+		dip ze zakysané smetany a dijonské hořčice, pečivo 1a,3,7,10</td>
+<td class="pricem">149 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Gulášová polévka z hovězího krku s čerstvou majoránkou
+a naší houskou 1a,7</td>
+<td class="pricem">89 Kč</td>
+</tr>
+<tr>
+<td class="amount">180 g</td>
+<td class="title">Grilované karbanátky s opečenými plátky brambor
+		a variací studených omáček 1a,3,7,10</td>
+<td class="pricem">159 Kč</td>
+</tr>
+<tr>
+<td class="amount">1 ks</td>
+<td class="title">Hot Dog s chilli párkem, bbq majonézou, chedarem, rukolou
+		a smaženou cibulkou, salát z kysaného zelí 1a,3,7,10,12</td>
+<td class="pricem">129 Kč</td>
+</tr>
+<tr>
+<td class="amount">400 g</td>
+<td class="title">Pečené vykostěné vepřové koleno na černém pivu s omáčkou
+		z paprik, rajčat a cibule, křen, hořčice, pečivo 1abc,10</td>
+<td class="pricem">219 Kč</td>
+</tr>
+<tr>
+<td class="amount">150 g</td>
+<td class="title">Smažené jalapeňos plněné nivou &amp; cibulové kroužky v pivním
+		těstíčku se zakysanou smetanou a trhaným salátem 1ac,3,7</td>
+<td class="pricem">119 Kč</td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm">
+<tbody>
+<tr>
+<td class="title">Gin Tonic Okurkový<br/>
+gin / tonic / čerstvá okurka / led</td>
+<td class="pricem">109 Kč</td>
+</tr>
+<tr>
+<td class="title">Gin Tonic Malina<br/>
+malinový gin / tonic  / lesní plody / ovoce / led</td>
+<td class="pricem">109 Kč</td>
+</tr>
+<tr>
+<td class="title">Gin Tonic Zázvorový<br/>
+gin / zázvorový tonik / citron / led</td>
+<td class="pricem">109 Kč</td>
+</tr>
+<tr>
+<td class="title">Gin Tonic Targa Florio<br/>
+gin / citronová limonáda / citron / led</td>
+<td class="pricem">109 Kč</td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
 <tr>
 <td>
 <table class="dm"><tr><td class="amount"> </td><td class="title">Zelná bílá s uzeným masem a brambory 1a,7,12</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Vídeňská roštěná s jasmínovou rýží 1a,7</td><td class="pricem">155 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Kuřecí medailonky ve vinném těstíčku s bramborovou kaší a šopským salátem 1a,3,7,12</td><td class="pricem">149 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Pečená kuřecí křídla s hoisin omáčkou, coleslaw salátem, blue cheese omáčkou a rozpečenou bylinkovou bagetou 1a,3,6,7,10</td><td class="pricem">145 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
