Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 25.05.2022 08:47:45</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 25.05.2022 09:11:50</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -142,7 +142,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Smazeny filet z atlantickeho hejka, pecene brambory, tatarska omacka, salatek {L} 149</li><li>Ceviche z cerstve norske bile tresky se sladkokyselym sezamovo-limetkovym dresinkem, ryzove nudle se zeleninou a zelenymi bylinkami 175</li><li>Malajsky hovezi rendang s bramborami, ananasem, kokosovym mlekem a vonavym korenim, jasminova ryze, salatek 149</li><li>Burger s trhanou pecenou kanci pleci {rimsky salat, sriracha majoneza, marinovane redkvicky, jalapenos}, pecene brambory, salatek 175</li><li>Bramborove gnocchi s chrestem, gaj coj a modrym syrem, salatek {L} 149 </li></ol>
+<ol><li>Peceny jihocesky pstruh s citronem a tureckymi cernymi olivami, fusilli salat s paprikami, cuketami, chrestem, cerstvymi rajcaty a zelenymi bylinkami {L} 149</li><li>Peceny filet z cerstveho africkeho sumecka a candata s citronem a tureckymi cernymi olivami, fusilli salat s paprikami, cuketami, chrestem, cerstvymi rajcaty a zelenymi bylinkami {L} 175</li><li>Ramen s dusenym vonavym hovezim, gaj coj, sazenym vejcem a psenicnymi nudlemi v silnem hovezim vyvaru se zelenymi bylinkami {L} 149</li><li>Burrito s grilovanymi dancimi kofte, rimskym salatem a rajcetem, okurkove tzatziki, korenena ryze s beluga cockou, salatek {L} 175</li><li>Indicke kvetakove kari s bataty, cizrnou, rajcaty a syrem halloumi, jasminova ryze 149</li></ol>
 </td>
 </tr>
 </table>
