Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 26.05.2022 08:15:36</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 26.05.2022 08:47:27</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -54,7 +54,7 @@
 <ul>
 <li class="poznamka">
 <div class="polozka">Mrkvový dort</div>
-<div class="cena">65 Kč</div>
+<div class="cena">55 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="poznamka">
@@ -135,7 +135,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny jihocesky pstruh s citronem a tureckymi cernymi olivami, fusilli salat s paprikami, cuketami, chrestem, cerstvymi rajcaty a zelenymi bylinkami {L} 149</li><li>Peceny filet z cerstveho africkeho sumecka a candata s citronem a tureckymi cernymi olivami, fusilli salat s paprikami, cuketami, chrestem, cerstvymi rajcaty a zelenymi bylinkami {L} 175</li><li>Ramen s dusenym vonavym hovezim, gaj coj, sazenym vejcem a psenicnymi nudlemi v silnem hovezim vyvaru se zelenymi bylinkami {L} 149</li><li>Burrito s grilovanymi dancimi kofte, rimskym salatem a rajcetem, okurkove tzatziki, korenena ryze s beluga cockou, salatek {L} 175</li><li>Indicke kvetakove kari s bataty, cizrnou, rajcaty a syrem halloumi, jasminova ryze 149</li></ol>
+<ol><li>Thajske cervene kari s kousky rybich filetu {hejk, sled, makrela, nilsky okoun}, kokosovym mlekem, gaj coj a zeleninou, jasminova ryze 149</li><li>Peceny filet z cerstveho norskeho lososa se svedskym dresinkem z celozrne horcice s koprem, stouchane brambory s porkem, salatek z cervene repy 175</li><li>Bengalske pikantni jalfrezi s krutimi prsicky, paprikami a zelenou cibulkou, jasminova ryze, salatek 149</li><li>Smazene rizecky z teleci kyty, stouchane brambory s porkem, salatek z cervene repy {L} 175</li><li>Maghrebska zapecena saksuka s vejci, cerstvymi rajcaty, paprikami a cerstvym ovcim syrem, pohanka se smazenou cibulkou, </li><li>salatek 149</li></ol>
 </td>
 </tr>
 </table>
